@@ -15,6 +15,8 @@ Version 1.6
   * Dylan console (PR#149)
   * Logos (PR#150)
 
+- Fix guessed lexers not receiving lexer options (#838).
+
 
 Version 1.6rc1
 --------------
